@@ -98,25 +98,23 @@ parameters except `items` are optional. Use ``connection.queryAll(query)``
 to execute the query and get back the results as a list of rows.
 
 `items`:
-   An SQLExpression or a sequence of SQLExpression's, represents the
-   list of columns. If there are q-values SQLExpression's ``Select``
-   derives a list of tables for SELECT query.
+   A string, an SQLExpression or a sequence of strings or
+   SQLExpression's, represents the list of columns. If there are
+   q-values SQLExpression's ``Select`` derives a list of tables for
+   SELECT query.
 
 `where`:
-   An SQLExpression, represents the ``WHERE`` clause.
+   A string or an SQLExpression, represents the ``WHERE`` clause.
 
 `groupBy`:
-   An SQLExpression, represents the ``GROUP BY`` clause.
+   A string or an SQLExpression, represents the ``GROUP BY`` clause.
 
 `having`:
-   An SQLExpression, represents the ``HAVING`` part of the ``GROUP BY``
-   clause.
+   A string or an SQLExpression, represents the ``HAVING`` part of the
+   ``GROUP BY`` clause.
 
 `orderBy`:
-   An SQLExpression, represents the ``ORDER BY`` clause.
-
-`limit`:
-   An SQLExpression, represents the ``LIMIT`` clause.
+   A string or an SQLExpression, represents the ``ORDER BY`` clause.
 
 `join`:
    A (list of) JOINs (``LEFT JOIN``, etc.)
@@ -125,8 +123,10 @@ to execute the query and get back the results as a list of rows.
    A bool flag to turn on ``DISTINCT`` query.
 
 `start`, `end`:
-   Integers. Alternative ways to calculate ``LIMIT``. `limit`, if passed,
-   overrides `end`.
+   Integers. The way to calculate ``OFFSET`` and ``LIMIT``.
+
+`limit`:
+   An integer. `limit`, if passed, overrides `end`.
 
 `reversed`:
    A bool flag to do ``ORDER BY`` in the reverse direction.
@@ -137,7 +137,7 @@ to execute the query and get back the results as a list of rows.
 `staticTables`:
    A sequence of strings or SQLExpression's that name tables for
    ``FROM``. This parameter must be used if `items` is a list of strings
-   from which Select cannot derive a list of tables.
+   from which Select cannot derive the list of tables.
 
 Insert
 ~~~~~~
